# simple_zed2_wrapper

./: .gitignore  CMakeLists.txt  README.md  package.xml  result_robot_to_camera_matrix.csv
include/: utils.hpp
launch/: zed2.launch  zed2_global_human_pose.launch  zed2_semantic_dsp.launch
msg/: BoundingBox2Df.msg  BoundingBox2Di.msg  BoundingBox3D.msg  Object.msg  ObjectsStamped.msg  Skeleton2D.msg  Skeleton3D.msg
src/: global_human_pose.cpp  zed2_node.cpp
